--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,14 @@
 
 /* Your CSS Code here. */
+thead > tr > th{
+	color:white;
+}
 
 .text-right{
 	text-align:right !important;
 }
 
-tr:hover{
-	color:white;
-	background-color:black;
+.table-hover{
+	color:black;
+	background-color:white;
 }
